force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Equipment_Size_Code__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Size_Code__c</fullName>
    <label>Equipment Size Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Container_Size_Code</valueSetName>
    </valueSet>
</CustomField>