force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Equipment_Style__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Style__c</fullName>
    <label>Equipment Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipment_Style</valueSetName>
    </valueSet>
</CustomField>