force-app/main/default/objects/SBQQ__QuoteLine__c/fields/EventRecurrence__c.field-meta.xml
<CustomField>
    <fullName>EventRecurrence__c</fullName>
    <label>EventRecurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yealy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>