force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Exception_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exception_Comments__c</fullName>
    <label>Exception Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>