force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Exception_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Effective_Date__c</fullName>
    <label>Exception Effective Date</label>
    <type>DateTime</type>
</CustomField>