force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <label>Exception Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Exception_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Exception_Types</valueSetName>
    </valueSet>
</CustomField>