force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OAKINITCHG</fullName>
                <label>Oakleaf Initiated Change</label>
            </value>
            <value>
                <fullName>VENINITCHG</fullName>
                <label>Vendor Initiated Change</label>
            </value>
            <value>
                <fullName>CANCELWOCOMP</fullName>
                <label>WO Component Cancellation</label>
            </value>
            <value>
                <fullName>COV19</fullName>
                <label>COVID – 19</label>
            </value>
            <value>
                <fullName>CLTINITCHG</fullName>
                <label>Client Initiated Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>