force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Exceptions_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Exceptions_Effective_Date__c</fullName>
    <description>created for SDT-29806
purpose - We had Exception_Effective_Date__c field earlier of type(DateTime), In Acorn we only need to operate on Date and not time. It was extra effort to handle time without any need. So this field will be copy of earlier Exception_Effective_Date__c field with only date part of it.</description>
    <label>Exception Effective Date</label>
    <type>Date</type>
</CustomField>