force-app/main/default/objects/SBQQ__QuoteLine__c/fields/HoldUntilPosted__c.field-meta.xml
<CustomField>
    <fullName>HoldUntilPosted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HoldUntilPosted</label>
    <type>Checkbox</type>
</CustomField>