force-app/main/default/objects/SBQQ__QuoteLine__c/fields/IncludeTaxInCostAmount__c.field-meta.xml
<CustomField>
    <fullName>IncludeTaxInCostAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncludeTaxInCostAmount</label>
    <type>Checkbox</type>
</CustomField>