force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Initial_Classification_Changes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Classification_Changes__c</fullName>
    <label>Initial Classification Changes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>