force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Substituted_Container__c.field-meta.xml
<CustomField>
    <fullName>Is_Substituted_Container__c</fullName>
    <formula>IF(  
(NOT(ISBLANK(Original_Equipment_Size__c))  &amp;&amp;  NOT(ISNULL(Original_Equipment_Size__c)) 
 &amp;&amp; 
(TEXT(Equipment_Size__c) &lt;&gt; Original_Equipment_Size__c)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Substituted Container</label>
    <type>Checkbox</type>
</CustomField>