force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Vendor_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Is_Vendor_Mismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created for story SDT-30956. It will be checked only if Vendor on Quoteline is different than vendor returned from Pricing Response</description>
    <label>Is Vendor Mismatch</label>
    <type>Checkbox</type>
</CustomField>