force-app/main/default/objects/SBQQ__QuoteLine__c/fields/IsAssetQuotelineDifferent__c.field-meta.xml
<CustomField>
    <fullName>IsAssetQuotelineDifferent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAssetQuotelineDifferent</label>
    <type>Checkbox</type>
</CustomField>