force-app/main/default/objects/SBQQ__QuoteLine__c/fields/IsExtraPickup__c.field-meta.xml
<CustomField>
    <fullName>IsExtraPickup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if ExtraPickup is present in Dumpster.
True in case present in Dumpster.</description>
    <label>IsExtraPickup</label>
    <type>Checkbox</type>
</CustomField>