force-app/main/default/objects/SBQQ__QuoteLine__c/fields/IsLocalBilling__c.field-meta.xml
<CustomField>
    <fullName>IsLocalBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLocalBilling</label>
    <type>Checkbox</type>
</CustomField>