force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Landfill_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Landfill_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landfill Tickets</label>
    <type>Checkbox</type>
</CustomField>