force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>