force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Location_Position_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Position_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Position Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Account_Position__c.AccountId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Position__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>