force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LocationPositionName__c.field-meta.xml
<CustomField>
    <fullName>LocationPositionName__c</fullName>
    <label>LocationPositionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>