force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>MarginPercentage__c</fullName>
    <label>MarginPercentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>