force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Markup_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Markup_Percentage__c</fullName>
    <formula>( SBQQ__ListPrice__c /  SBQQ__UnitCost__c ) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>