force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MAS_Delivery_Price__c.field-meta.xml
<CustomField>
    <fullName>MAS_Delivery_Price__c</fullName>
    <description>This field is created for MAS acorn/SF integration as per SDT-29622</description>
    <label>MAS Delivery Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>