force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MAS_Swapout__c.field-meta.xml
<CustomField>
    <fullName>MAS_Swapout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MAS Swapout</label>
    <type>Checkbox</type>
</CustomField>