force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MAS_SwapoutComment__c.field-meta.xml
<CustomField>
    <fullName>MAS_SwapoutComment__c</fullName>
    <label>MAS SwapoutComment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>