force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASAccount__c.field-meta.xml
<CustomField>
    <fullName>MASAccount__c</fullName>
    <label>MASAccount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>