force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASBox__c.field-meta.xml
<CustomField>
    <fullName>MASBox__c</fullName>
    <label>MASBox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>