force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASCompany__c.field-meta.xml
<CustomField>
    <fullName>MASCompany__c</fullName>
    <label>MASCompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>