force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASCustomerUniqueId__c.field-meta.xml
<CustomField>
    <fullName>MASCustomerUniqueId__c</fullName>
    <label>MASCustomerUniqueId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>