force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASDelivery__c.field-meta.xml
<CustomField>
    <fullName>MASDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MASDelivery</label>
    <type>Checkbox</type>
</CustomField>