force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASDeliveryComment__c.field-meta.xml
<CustomField>
    <fullName>MASDeliveryComment__c</fullName>
    <label>MASDeliveryComment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>