force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASLibrary__c.field-meta.xml
<CustomField>
    <fullName>MASLibrary__c</fullName>
    <inlineHelpText>MAS Library must begin with &quot;ARDTA.&quot; followed by the library name. Example: ARDTA.268</inlineHelpText>
    <label>MASLibrary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>