force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASNewTicket__c.field-meta.xml
<CustomField>
    <fullName>MASNewTicket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MASNewTicket</label>
    <type>Checkbox</type>
</CustomField>