force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASNewTicketComment__c.field-meta.xml
<CustomField>
    <fullName>MASNewTicketComment__c</fullName>
    <label>MASNewTicketComment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>