force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASOpsRouting__c.field-meta.xml
<CustomField>
    <fullName>MASOpsRouting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MASOpsRouting</label>
    <type>Checkbox</type>
</CustomField>