force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASOpsRoutingComment__c.field-meta.xml
<CustomField>
    <fullName>MASOpsRoutingComment__c</fullName>
    <label>MASOpsRoutingComment</label>
    <type>TextArea</type>
</CustomField>