force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASRemoval__c.field-meta.xml
<CustomField>
    <fullName>MASRemoval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MASRemoval</label>
    <type>Checkbox</type>
</CustomField>