force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASRemovalComment__c.field-meta.xml
<CustomField>
    <fullName>MASRemovalComment__c</fullName>
    <label>MASRemovalComment</label>
    <type>TextArea</type>
</CustomField>