force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MASServiceLine__c.field-meta.xml
<CustomField>
    <fullName>MASServiceLine__c</fullName>
    <label>MASServiceLine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>