force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Waste_Stream</valueSetName>
    </valueSet>
</CustomField>