force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Material_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Type_Code__c</fullName>
    <formula>IF( TEXT( Material_Type__c) == &apos;Trash&apos; ,&apos;T&apos;, IF( TEXT( Material_Type__c) == &apos;Cardboard&apos; ,&apos;c&apos;, IF( TEXT( Material_Type__c) == &apos;Tires&apos; ,&apos;TIR&apos;, IF( TEXT( Material_Type__c) == &apos;Metal&apos; ,&apos;ME&apos;, IF( TEXT( Material_Type__c) == &apos;Pallets&apos; ,&apos;PLT&apos;, &apos;&apos;) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Type Code</label>
    <type>Text</type>
</CustomField>