force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MaterialGrade__c.field-meta.xml
<CustomField>
    <fullName>MaterialGrade__c</fullName>
    <label>MaterialGrade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Grade</fullName>
            </value>
            <value>
                <fullName>International Trash</fullName>
            </value>
            <value>
                <fullName>WTEND</fullName>
                <label>WTE Non-Diverted</label>
            </value>
            <value>
            <fullName>Waxed OCC</fullName>
            </value>
            <value>
            <fullName>Cardboard 36&quot; Bales</fullName>
            </value>
            <value>
            <fullName>Cardboard 42&quot; Bales</fullName>
            </value>
            <value>
            <fullName>Cardboard 48&quot; Bales</fullName>
            </value>
            <value>
            <fullName>Cardboard 60&quot; Bales</fullName>
            </value>
            <value>
            <fullName>Cardboard 64&quot; Bales</fullName>
            </value>
            <value>
            <fullName>Cardboard 72&quot; Bales</fullName>
            </value>
            <value>
            <fullName>Cardboard Compacted</fullName>
            </value>
            <value>
            <fullName>Cardboard Flattened Loose</fullName>
            </value>
            <value>
            <fullName>Cardboard Reusable Boxes</fullName>
            </value>
            <value>
            <fullName>Cardboard Reusable Boxes - Large</fullName>
            </value>
            <value>
            <fullName>Cardboard Reusable Boxes - Medium</fullName>
            </value>
            <value>
            <fullName>Cardboard Reusable Boxes - Small</fullName>
            </value>
            <value>
            <fullName>Cardboard Strapped to Pallet</fullName>
            </value>
            <value>
            <fullName>Cardboard Whole Loose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>