force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Month_Relative_Interval__c.field-meta.xml
<CustomField>
    <fullName>Month_Relative_Interval__c</fullName>
    <label>Month Relative Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month_Relative_Interval</valueSetName>
    </valueSet>
</CustomField>