force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NotifReasonCode__c.field-meta.xml
<CustomField>
    <fullName>NotifReasonCode__c</fullName>
    <label>NotifReasonCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>