force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NTE_amount_on_SR__c.field-meta.xml
<CustomField>
    <fullName>NTE_amount_on_SR__c</fullName>
    <label>NTE amount on SR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>