force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Number_of_Workers_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Workers_Onsite__c</fullName>
    <description>Pertains to Portalet requests only</description>
    <label>Number of Workers Onsite</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>