force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Occurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Type__c</fullName>
    <label>Occurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OC</fullName>
                <label>On-Call</label>
            </value>
            <value>
                <fullName>SOC</fullName>
                <label>Scheduled On-Call</label>
            </value>
            <value>
                <fullName>SCH</fullName>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>OnCall`</fullName>
                <isActive>false</isActive>
                <label>OnCall`</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>