force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_Equipment_Size__c.field-meta.xml
<CustomField>
    <fullName>Original_Equipment_Size__c</fullName>
    <label>Original Equipment Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>