force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Other_Paperwork_Needs__c.field-meta.xml
<CustomField>
    <fullName>Other_Paperwork_Needs__c</fullName>
    <label>Other Paperwork Needs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>