force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OverrideApprover__c.field-meta.xml
<CustomField>
    <fullName>OverrideApprover__c</fullName>
    <label>OverrideApprover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>