force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Only_Reason__c.field-meta.xml
<CustomField>
    <fullName>Price_Only_Reason__c</fullName>
    <label>Price Only Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRR</fullName>
                <label>No Rates Returned</label>
            </value>
            <value>
                <fullName>MRP</fullName>
                <label>Modeled Rates Provided</label>
            </value>
            <value>
                <fullName>PVU</fullName>
                <label>Pricing Vendor Unable to Provide Service</label>
            </value>
            <value>
                <fullName>PVI</fullName>
                <label>Pricing Vendor is not the Incumbent</label>
            </value>
            <value>
                <fullName>PRI</fullName>
                <label>Pricing Rates Were Incorrect</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>