force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Override_Description__c.field-meta.xml
<CustomField>
    <fullName>Price_Override_Description__c</fullName>
    <description>This field is created as a part of SDT-26002 in Sprint 20</description>
    <label>Price Override Description</label>
    <type>TextArea</type>
</CustomField>