force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Rule_Logic_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Price_Rule_Logic_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks when the price rule logic has been triggered to prevent it from being updated multiple times during the process of update</description>
    <label>Price Rule Logic Triggered</label>
    <type>Checkbox</type>
</CustomField>