force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceIncrement1__c.field-meta.xml
<CustomField>
    <fullName>PriceIncrement1__c</fullName>
    <label>Price Increment 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>