force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceIncrement2__c.field-meta.xml
<CustomField>
    <fullName>PriceIncrement2__c</fullName>
    <label>Price Increment 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>