force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceIncrement3__c.field-meta.xml
<CustomField>
    <fullName>PriceIncrement3__c</fullName>
    <label>Price Increment 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>