force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceMinQuantity__c.field-meta.xml
<CustomField>
    <fullName>PriceMinQuantity__c</fullName>
    <label>Price Minimum Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>