force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PricePrice1__c.field-meta.xml
<CustomField>
    <fullName>PricePrice1__c</fullName>
    <label>Stepped Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>