force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PricePrice2__c.field-meta.xml
<CustomField>
    <fullName>PricePrice2__c</fullName>
    <label>Stepped Price 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>