force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PricePrice3__c.field-meta.xml
<CustomField>
    <fullName>PricePrice3__c</fullName>
    <label>Stepped Price 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>