force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceUpTo1__c.field-meta.xml
<CustomField>
    <fullName>PriceUpTo1__c</fullName>
    <label>Price UpTo 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>