force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceUpTo2__c.field-meta.xml
<CustomField>
    <fullName>PriceUpTo2__c</fullName>
    <label>Price UpTo 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>