force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceUpTo3__c.field-meta.xml
<CustomField>
    <fullName>PriceUpTo3__c</fullName>
    <label>Price UpTo 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>