force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_API_Method__c.field-meta.xml
<CustomField>
    <fullName>Pricing_API_Method__c</fullName>
    <label>Pricing API Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>